# personal-agent

./: .gitignore  README.md  main.py  pyproject.toml
agent/: __init__.py  ghost.py  model.py  shell.py
agent/sources/: glm.py
knowledge/: custom-search.md  mem-zero.md
tests/: config.py
tests/e2e/: test_e2e.py
tests/integration/: test_glm.py
tests/unit/: test_ghost.py  test_model.py  test_shell.py
