[project]
name = "personal-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["httpx>=0.27.0", "pyjwt>=2.8.0"]

[project.optional-dependencies]
dev = ["ruff>=0.9.0", "pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
  "unit: marks tests as unit tests (fast, no external deps)",
  "integration: marks tests as integration tests (external APIs)",
  "e2e: marks tests as end-to-end tests (full system)",
]

[tool.ruff]
line-length = 100
indent-width = 2

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.format]
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
